# File_integrity_check

./: .gitignore  CMakeLists.txt  README.md  dependency_params.txt
files_to_check/: ошибка в логе.txt
implementation/: calculate_queue.cpp  calculate_queue.hpp  file_check_sum_calculator.cpp  file_check_sum_calculator.hpp  main.cpp
implementation/signal_handler/: signal_handler.cpp  signal_handler.hpp
implementation/timer/: calculate_timer.cpp  calculate_timer.hpp
implementation/utils/: args_parser.cpp  args_parser.hpp  config.hpp  sys_logger.cpp  sys_logger.hpp  utils.cpp  utils.hpp
